# BearLibTerminal.rs

./: .gitignore  .travis.yml  BearLibTerminal.rs.sublime-project  Cargo.toml  LICENSE  README.md  aliases.js  appveyor.yml  gh_rsa.enc  search-index.js  settings.html  source-files.js
bear_lib_terminal/: all.html  index.html  sidebar-items.js  struct.Color.html
bear_lib_terminal/colors/: sidebar-items.js  struct.Color.html
bear_lib_terminal/geometry/: index.html  sidebar-items.js  struct.Point.html  struct.Rect.html  struct.Size.html
bear_lib_terminal/terminal/: composition.v.html  enum.Event.html  enum.KeyCode.html  fn.clear.html  fn.close.html  fn.composition.html  fn.crop.html  fn.delay.html  fn.events.html  fn.has_input.html  fn.layer.html  fn.measure.html  fn.open.html  (+40 more)
bear_lib_terminal_sys/: ColorT.t.html  TK_0.v.html  TK_1.v.html  TK_2.v.html  TK_3.v.html  TK_4.v.html  TK_5.v.html  TK_6.v.html  TK_7.v.html  TK_8.v.html  TK_9.v.html  TK_A.v.html  TK_ALIGN_BOTTOM.v.html  TK_ALIGN_CENTER.v.html  TK_ALIGN_DEFAULT.v.html  TK_ALIGN_LEFT.v.html  TK_ALIGN_MIDDLE.v.html  TK_ALIGN_RIGHT.v.html  TK_ALIGN_TOP.v.html  TK_ALT.v.html  TK_APOSTROPHE.v.html  TK_B.v.html  TK_BACKSLASH.v.html  TK_BACKSPACE.v.html  TK_BKCOLOR.v.html  TK_C.v.html  TK_CELL_HEIGHT.v.html  TK_CELL_WIDTH.v.html  TK_CHAR.v.html  TK_CLOSE.v.html  TK_COLOR.v.html  TK_COMMA.v.html  TK_COMPOSITION.v.html  TK_CONTROL.v.html  TK_D.v.html  TK_DELETE.v.html  TK_DOWN.v.html  TK_E.v.html  TK_END.v.html  TK_ENTER.v.html  (+265 more)
examples/: simple.rs
libc/: index.html
src/: colors.rs  geometry.rs  lib.rs
(+185 files in other folders)
