[package]
name = "bear-lib-terminal"
description = "BearLibTerminal FFI for Rust"
documentation = "https://cdn.rawgit.com/nabijaczleweli/BearLibTerminal.rs/doc/bear_lib_terminal/index.html"
repository = "https://github.com/nabijaczleweli/BearLibTerminal.rs"
readme = "README.md"
keywords = ["BearLibTerminal", "FFI", "TUI", "UI"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "1.3.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>",
           "Cat Plus Plus <piotrlegnica@piotrl.pl>"]
exclude = ["*.enc"]

[dependencies]
bear-lib-terminal-sys = "1.1.1"
